--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,12 @@
 			name="description"
 			content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="stylesheet" href="styles.css" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+		<!-- Bootstrap CSS -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -45,6 +47,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
       
     -->
+		<!-- Bootstrap JS -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
